--- a/about.html
+++ b/about.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="about.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="navbar.css">
 </head>
 
 <body>
+    <div id="navbar"></div>
 
     <!------Breadcrumb Section------->
     <section class="breadcrumb">
@@ -96,6 +98,12 @@
         </div>
     </section>
     <!------About Section End--------->
+
+    <!-- Footer -->
+
+    <div id="footer"></div>
+    <script src="footerCommon.js"></script>
+    <script src="navbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
