--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto ">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link text-dark" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">About</a>
+                        <a class="nav-link text-dark" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="#">Shop</a>
@@ -34,7 +34,7 @@
                         <a class="nav-link text-dark" href="#">Contact</a>
                     </li>
 
-                    <button class="nav-link btn btn-theme text-white rounded-pill px-4">My account</button>
+                    <button class="btn btn-theme text-white rounded-pill px-4">My account</button>
                 </ul>
             </div>
         </div>
