added products in shop component

--- a/shop.html
+++ b/shop.html
@@ -14,6 +14,53 @@
 
     <div id="navbar"></div>
 
+
+    <!------Breadcrumb Section------->
+    <section class="breadcrumb">
+        <div class="container">
+            <h3>Our Teas</h3>
+        </div>
+    </section>
+    <!-------Breadcrumb End------->
+
+    <!------Product Section Start--------->
+    <section class="about products-sec">
+        <div class="container">
+            <div class="text-center mb-5">
+                <h3 class="ttl mb-3">Black Tea</h3>
+                <p class="text-center mb-4">
+                    IF YOU FEEL DRINKING A CUP OF TEA IS THE BEST PART OF YOUR DAY, SHOULDN'T
+                    YOU BE DRINKING ONLY THE BEST TEA? IF YOUR ANSWER IS A RESOUNDING ‘YES’,
+                    THEN YOU HAVE COME TO THE RIGHT PLACE.
+                </p>
+            </div>
+            <div class="row">
+                <div class="col-md-4 text-center">
+                    <img src="images/p1.png" class="img-fluid mb-3" alt="" />
+                    <h5>PREMIUM LEAF TEA</h5>
+                    <span>1KG</span>
+                    <br />
+                    <a href="" class="btn btn-light border mt-3 shop-btn">Shop Now</a>
+                </div>
+                <div class="col-md-4 text-center">
+                    <img src="images/p2.png" class="img-fluid mb-3" alt="" />
+                    <h5>FANNING TEA</h5>
+                    <span>2kG</span>
+                    <br />
+                    <a href="" class="btn btn-light border mt-3 shop-btn">Shop Now</a>
+                </div>
+                <div class="col-md-4 text-center">
+                    <img src="images/p3.png" class="img-fluid mb-3" alt="" />
+                    <h5>DAZZLING (STRONG TEA)</h5>
+                    <span>1KG</span>
+                    <br />
+                    <a href="" class="btn btn-light border mt-3 shop-btn">Shop Now</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!------Product Section End--------->
+
     <script src="navbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
