--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a class="nav-link text-dark" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">Shop</a>
+                        <a class="nav-link text-dark" href="shop.html">Shop</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="#">Contact</a>
