added overfollowX-hidded in style.css

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2181.452131457194!2d72.27241052190294!3d23.14279130828805!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395c1e37c4353329%3A0xfc3829b6f77dd438!2sAgol%2C%20Gujarat%20382165!5e0!3m2!1sen!2sin!4v1722424634682!5m2!1sen!2sin"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d458.59829647310113!2d72.27075351223408!3d23.141482574424074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395c1f00137dc557%3A0xd84787db1be2b5cd!2sAman%20Kureshi!5e0!3m2!1sen!2sin!4v1739325243026!5m2!1sen!2sin"
                         width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
