create cart section

--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
                         <a class="nav-link text-dark" href="shop.html">Shop</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">Contact</a>
+                        <a class="nav-link text-dark" href="contact.html">Contact</a>
                     </li>
 
-                    <button class="btn btn-theme text-white rounded-pill px-4">My account</button>
+                    <button class="btn btn-theme text-white rounded-pill px-4">
+                        <a class="text-dark text-decoration-none text-white" href="myaccount.html">My account<a />
+                    </button>
                 </ul>
             </div>
         </div>
