added tea-product class and new tea product image in shop component

--- a/shop.html
+++ b/shop.html
@@ -36,26 +36,59 @@
                 </p>
             </div>
             <div class="row">
-                <div class="col-md-4 text-center">
-                    <img src="images/p1.png" class="img-fluid mb-3" alt="" />
-                    <h5>PREMIUM LEAF TEA</h5>
-                    <span>1KG</span>
-                    <br />
-                    <a href="" class="btn btn-light border mt-3 shop-btn">Shop Now</a>
+                <div class="col-md-4 text-center ">
+                    <div class="tea-product">
+                        <img src="images/p1.png" class="img-fluid" alt="" />
+                        <h5>PREMIUM LEAF TEA</h5>
+                        <span>1KG</span>
+                        <br />
+                        <a href="" class="btn btn-light border mt-3 mb-2 mb-2 shop-btn">Shop Now</a>
+                    </div>
                 </div>
                 <div class="col-md-4 text-center">
-                    <img src="images/p2.png" class="img-fluid mb-3" alt="" />
-                    <h5>FANNING TEA</h5>
-                    <span>2kG</span>
-                    <br />
-                    <a href="" class="btn btn-light border mt-3 shop-btn">Shop Now</a>
+                    <div class="tea-product">
+                        <img src="images/p2.png" class="img-fluid" alt="" />
+                        <h5>FANNING TEA</h5>
+                        <span>2kG</span>
+                        <br />
+                        <a href="" class="btn btn-light border mt-3 mb-2 shop-btn">Shop Now</a>
+                    </div>
+                </div>
+                <div class="col-md-4 text-center ">
+                    <div class="tea-product">
+                        <img src="images/p3.png" class="img-fluid" alt="" />
+                        <h5>DAZZLING (STRONG TEA)</h5>
+                        <span>1KG</span>
+                        <br />
+                        <a href="" class="btn btn-light border mt-3 mb-2 shop-btn">Shop Now</a>
+                    </div>
                 </div>
                 <div class="col-md-4 text-center">
-                    <img src="images/p3.png" class="img-fluid mb-3" alt="" />
-                    <h5>DAZZLING (STRONG TEA)</h5>
-                    <span>1KG</span>
-                    <br />
-                    <a href="" class="btn btn-light border mt-3 shop-btn">Shop Now</a>
+                    <div class="tea-product">
+                        <img src="images/tea-product.png" class="img-fluid" alt="" />
+                        <h5>DAZZLING (STRONG TEA)</h5>
+                        <span>1KG</span>
+                        <br />
+                        <a href="" class="btn btn-light border mt-3 mb-2 shop-btn">Shop Now</a>
+                    </div>
+                </div>
+                <div class="col-md-4 text-center ">
+                    <div class="tea-product">
+                        <img src="images/tea-product-4.png" class="img-fluid" alt="" />
+                        <h5>DAZZLING (STRONG TEA)</h5>
+                        <span>1KG</span>
+                        <br />
+                        <a href="" class="btn btn-light border mt-3 mb-2 shop-btn">Shop Now</a>
+                    </div>
+                </div>
+                <div class="col-md-4 text-center ">
+                    <div class="tea-product">
+                        <img src="images/tea-product-5.jpg" class="img-fluid" alt="" />
+                        <h5>DAZZLING (White Tea)</h5>
+                        <span>1KG</span>
+                        <br />
+                        <a href="" class="btn btn-light border mt-3 mb-2 shop-btn">Shop Now</a>
+                    </div>
                 </div>
             </div>
         </div>
