--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </div>
     </section>
     <!-----Footer Section------>
-    <footer class="footer">
+    <footer class="footer p-4">
         <div class="container">
             <div class="row">
                 <div class="col-md-4 mb-md-0 mb-4">
@@ -210,6 +210,8 @@
                 </div>
             </div>
         </div>
+        <hr>
+        <p class="text-center mt-4">&#169;copyright by armaneeTea 2025</p>
     </footer>
     <!-----Footer Section End------>
     <script>
