--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tea Leaves</title>
+    <link rel="shortcut icon" href="https://img.icons8.com/?size=200&id=102235&format=png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <!-- Bootstrap5-CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
