rename product card

--- a/shop.html
+++ b/shop.html
@@ -39,7 +39,7 @@
                 <div class="col-md-4 text-center ">
                     <div class="tea-product">
                         <img src="images/p1.png" class="img-fluid" alt="" />
-                        <h5>PREMIUM LEAF TEA</h5>
+                        <h5>Premium Leaf Tea</h5>
                         <span>1KG</span>
                         <br />
                         <a href="" class="btn btn-light border mt-3 mb-2 mb-2 shop-btn">Shop Now</a>
@@ -48,7 +48,7 @@
                 <div class="col-md-4 text-center">
                     <div class="tea-product">
                         <img src="images/p2.png" class="img-fluid" alt="" />
-                        <h5>FANNING TEA</h5>
+                        <h5>Fanning Tea</h5>
                         <span>2kG</span>
                         <br />
                         <a href="" class="btn btn-light border mt-3 mb-2 shop-btn">Shop Now</a>
@@ -57,7 +57,7 @@
                 <div class="col-md-4 text-center ">
                     <div class="tea-product">
                         <img src="images/p3.png" class="img-fluid" alt="" />
-                        <h5>DAZZLING (STRONG TEA)</h5>
+                        <h5> Dazzing (Strong Tea)</h5>
                         <span>1KG</span>
                         <br />
                         <a href="" class="btn btn-light border mt-3 mb-2 shop-btn">Shop Now</a>
@@ -66,7 +66,7 @@
                 <div class="col-md-4 text-center">
                     <div class="tea-product">
                         <img src="images/tea-product.png" class="img-fluid" alt="" />
-                        <h5>DAZZLING (STRONG TEA)</h5>
+                        <h5>Classic Green</h5>
                         <span>1KG</span>
                         <br />
                         <a href="" class="btn btn-light border mt-3 mb-2 shop-btn">Shop Now</a>
@@ -75,7 +75,7 @@
                 <div class="col-md-4 text-center ">
                     <div class="tea-product">
                         <img src="images/tea-product-4.png" class="img-fluid" alt="" />
-                        <h5>DAZZLING (STRONG TEA)</h5>
+                        <h5>Black Tea</h5>
                         <span>1KG</span>
                         <br />
                         <a href="" class="btn btn-light border mt-3 mb-2 shop-btn">Shop Now</a>
@@ -84,8 +84,8 @@
                 <div class="col-md-4 text-center ">
                     <div class="tea-product">
                         <img src="images/tea-product-5.jpg" class="img-fluid" alt="" />
-                        <h5>DAZZLING (White Tea)</h5>
-                        <span>1KG</span>
+                        <h5>White Tea</h5>
+                        <span>2KG</span>
                         <br />
                         <a href="" class="btn btn-light border mt-3 mb-2 shop-btn">Shop Now</a>
                     </div>
