--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
                 <div class="col-md-3 mb-md-0 mb-4">
                     <h5>Useful Links</h5>
                     <ul>
-                        <li><a href="/">Home</a></li>
-                        <li><a href="about">About us</a></li>
-                        <li><a href="shop">Shop</a></li>
-                        <li><a href="contact">Contact us</a></li>
+                        <li><a href="">Home</a></li>
+                        <li><a href="/about.html">About us</a></li>
+                        <li><a href="/shop.html">Shop</a></li>
+                        <li><a href="/contact.html">Contact us</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
