added fontawesome script in all component

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!-- AOS-animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- Font-awsome -->
+    <script src="https://kit.fontawesome.com/270c579228.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
