--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
     <!-- AOS-animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://kit.fontawesome.com/270c579228.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
