--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Tea Leaves</title>
     <link rel="shortcut icon" href="https://img.icons8.com/?size=200&id=102235&format=png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="footer.css">
     <!-- Bootstrap5-CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -177,8 +178,8 @@
             </div>
         </div>
     </section>
+
     <!-----Footer Section------>
-    <!-- Footer -->
     <footer class="text-center text-lg-start bg-body-tertiary text-muted">
         <!-- Section: Social media -->
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
@@ -222,7 +223,7 @@
                     <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
                         <!-- Content -->
                         <h6 class="text-uppercase fw-bold mb-4">
-                            <i class="fas fa-gem me-3"></i>Company name
+                            <i class="fa-brands fa-envira me-2"></i>Armanee Tea
                         </h6>
                         <p>
                             Here you can use rows and columns to organize your footer content. Lorem ipsum
@@ -238,16 +239,16 @@
                             Products
                         </h6>
                         <p>
-                            <a href="#!" class="text-reset text-decoration-none ">Angular</a>
+                            <a href="#!" class="text-reset text-decoration-none ">Home</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset text-decoration-none">React</a>
+                            <a href="#!" class="text-reset text-decoration-none">About</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset text-decoration-none">Vue</a>
+                            <a href="#!" class="text-reset text-decoration-none">Shop</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset text-decoration-none">Laravel</a>
+                            <a href="#!" class="text-reset text-decoration-none">Contact</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -295,11 +296,13 @@
         <!-- Copyright -->
         <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
             © 2021 Copyright:
-            <a class="text-reset fw-bold" href="">ArmaneeTea.com</a>
+            <a class="text-reset fw-bold" href="">ArmaaneTea.com</a>
         </div>
         <!-- Copyright -->
     </footer>
     <!-- Footer -->
+
+
     <!-----Footer Section End------>
     <script>
         AOS.init();
