--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
                         <a class="nav-link text-dark" href="contact.html">Contact</a>
                     </li>
 
-                    <button class="btn btn-theme text-white rounded-pill px-4">
-                        <a class="text-dark text-decoration-none text-white" href="myaccount.html">My account<a />
+                    <button class="btn btn-theme text-white l px-2">
+                        <!-- <a class="text-dark text-decoration-none text-white" href="myaccount.html">My account<a /> -->
+                        <a class="text-dark text-decoration-none text-white" href="myaccount.html"><img
+                                src="https://img.icons8.com/?size=200&id=7819&format=png" width="30" alt=""><a />
                     </button>
                 </ul>
             </div>
