--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                     <button class="btn btn-theme text-white l px-2">
                         <!-- <a class="text-dark text-decoration-none text-white" href="myaccount.html">My account<a /> -->
                         <a class="text-dark text-decoration-none text-white" href="myaccount.html"><img
-                                src="https://img.icons8.com/?size=200&id=7819&format=png" width="30" alt=""><a />
+                                src="https://img.icons8.com/?size=200&id=yV78UciKeGfe&format=png" width="30"
+                                alt=""><a />
                     </button>
                 </ul>
             </div>
