--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <!-----Footer Section------>
     <footer class="text-center text-lg-start bg-body-tertiary text-muted">
         <!-- Section: Social media -->
-        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+        <section class="d-flex justify-content-center justify-content-lg-between p-4 bottom">
             <!-- Left -->
             <div class="me-5 d-none d-lg-block">
                 <span>Get connected with us on social networks:</span>
@@ -194,29 +194,25 @@
 
             <!-- Right -->
             <div>
-                <a href="" class="me-4 text-reset">
+                <a href="" class="me-3 text-reset">
                     <i class="fab fa-facebook-f"></i>
                 </a>
-                <a href="" class="me-4 text-reset">
+                <a href="" class="me-3 text-reset">
                     <i class="fab fa-twitter"></i>
                 </a>
-                <a href="" class="me-4 text-reset">
-                    <i class="fab fa-google"></i>
-                </a>
-                <a href="" class="me-4 text-reset">
+                <a href="" class="me-3 text-reset">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a href="" class="me-4 text-reset">
+                <a href="" class="me-3 text-reset">
                     <i class="fab fa-linkedin"></i>
                 </a>
-                <a href="" class="me-4 text-reset">
+                <a href="" class="me-3 text-reset">
                     <i class="fab fa-github"></i>
                 </a>
             </div>
             <!-- Right -->
         </section>
         <!-- Section: Social media -->
-
         <!-- Section: Links  -->
         <section class="">
             <div class="container text-center text-md-start mt-5">
@@ -226,11 +222,12 @@
                     <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
                         <!-- Content -->
                         <h6 class="text-uppercase fw-bold mb-4">
-                            <i class="fa-brands fa-envira me-2"></i>Armanee Tea
+                            <i class="fa-brands fa-envira me-2 text-success"></i>Armanee Tea
                         </h6>
-                        <p>
-                            Here you can use rows and columns to organize your footer content. Lorem ipsum
-                            dolor sit amet, consectetur adipisicing elit.
+                        <p class="text-justify first-text">
+                            Armanee Tea is a Premium Tea Company, having presence in tea
+                            business since 2010.Armanee Tea ,blends natural teas, along
+                            with organic teas.
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -281,13 +278,13 @@
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                         <!-- Links -->
                         <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-                        <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+                        <p><i class="fas fa-home me-3"></i> Agol, Kadi-Gujarat, In</p>
                         <p>
                             <i class="fas fa-envelope me-3"></i>
-                            info@example.com
+                            armaneetea@2024.com
                         </p>
-                        <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-                        <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+                        <p><i class="fas fa-phone me-3"></i> + 91 97128 27603</p>
+                        <p><i class="fas fa-print me-3"></i> + 91 99123 45678</p>
                     </div>
                     <!-- Grid column -->
                 </div>
