--- a/myaccount.html
+++ b/myaccount.html
@@ -10,6 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="navbar.css" />
+    <!-- Font-awsome -->
+    <script src="https://kit.fontawesome.com/270c579228.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="my-account.css">
 </head>
 
 <body>
@@ -41,12 +44,34 @@
                             <button type="submit" class="btn btn-primary"
                                 style="background-color: #1D1D1D; border: none;">Login</button>
                         </form>
+                        <!-- Sign Up With Divider and Text -->
+                        <div class="divider">
+                            <span class="divider-text">Sign up with</span>
+                        </div>
+
+                        <!-- Social Media Login Buttons -->
+                        <div class="social-login-buttons flex gap-2 text-center">
+                            <button class="btn btn-facebook">
+                                <i class="fab fa-facebook-f"></i>
+                            </button>
+                            <button class="btn btn-google">
+                                <!-- <i class="fab fa-google"></i> -->
+                                <img src="https://img.icons8.com/?size=96&id=17949&format=png" alt="google-icon"
+                                    width="18">
+                            </button>
+                            <button class="btn btn-apple">
+                                <i class="fab fa-apple"></i>
+                            </button>
+                        </div>
+                        <p class="signin text-center pt-4">Don't Have an account? <a href="sign-in.html">sign up</a></p>
                     </div>
+
+
                 </div>
-                <div class="col-md-2">
+                <!-- <div class="col-md-2">
                     <div class="line-ver"></div>
-                </div>
-                <div class="col-md-4">
+                </div> -->
+                <!-- <div class="col-md-4">
                     <div class="acc-block">
                         <h3 class="mb-4 text-center text-dark">Sign Up</h3>
                         <form method="post">
@@ -61,7 +86,7 @@
                                 style="background-color: #1D1D1D; border: none;">Register</button>
                         </form>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
