added cup animatioin in about page

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     <!------About Section Start--------->
     <section class="about">
         <div class="text-center mb-5">
-            <img src="images/cup.png" width="100" class="img-fluid" alt="">
+            <img src="images/cup.png" width="100" class="img-fluid tea-cup" alt="">
             <h3 class="ttl mb-5">Armanee Tea Shop</h3>
         </div>
 
