--- a/cart.html
+++ b/cart.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="about.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Font-awsome -->
+    <script src="https://kit.fontawesome.com/270c579228.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="footer.css">
+
+
 </head>
 
 <body>
