added favicon in all component

--- a/details-page.html
+++ b/details-page.html
@@ -69,7 +69,8 @@
                             <li>No added Preservative</li>
                         </ul>
                         <br />
-                        <a class="btn btn-primary p-2" style="background-color: #C4996C;border: none;" href="">Add
+                        <a class="btn btn-primary p-2" style="background-color: #C4996C;border: none;"
+                            href="cart.html">Add
                             to
                             Cart</a>
                     </div>
