--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Contact</title>
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="footer.css">
+    <link rel="shortcut icon" href="https://img.icons8.com/?size=200&id=102235&format=png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="navbar.css">
