--- a/myaccount.html
+++ b/myaccount.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="footer.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <link rel="shortcut icon" href="https://img.icons8.com/?size=200&id=102235&format=png" type="image/x-icon">
     <link rel="stylesheet" href="navbar.css" />
     <!-- Font-awsome -->
     <script src="https://kit.fontawesome.com/270c579228.js" crossorigin="anonymous"></script>
