--- a/shop.html
+++ b/shop.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>shop</title>
     <link rel="stylesheet" href="navbar.css">
+    <link rel="shortcut icon" href="https://img.icons8.com/?size=200&id=102235&format=png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="shop.css">
@@ -96,7 +97,7 @@
                             &#8377;350
                             <span style="font-size: 1rem;">(1KG)</span>
                         </span>
-                        <a href="" class="btn btn-light border mt-3 mb-3 shop-btn">Shop Now</a>
+                        <a href="details-page.html" class="btn btn-light border mt-3 mb-3 shop-btn">Shop Now</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center ">
