added link in navbar-brand and change height for my-account img and remove extra padding in footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="images/Tea_logo.png" class="logo" alt=""></a>
+            <a class="navbar-brand" href="#!"><img src="images/Tea_logo.png" class="logo" alt=""></a>
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -46,6 +46,8 @@
                         <!-- <a class="text-dark text-decoration-none text-white" href="myaccount.html">My account<a /> -->
                         <a class="text-dark text-decoration-none text-white" href="myaccount.html"><img
                                 src="https://img.icons8.com/?size=100&id=7819&format=png" width="30" alt=""><a />
+                            <!-- <img src="https://img.icons8.com/?size=96&id=85080&format=png" class="mx-2" alt=""
+                                width="30"> -->
                     </button>
                 </ul>
             </div>
