--- a/sign-in.html
+++ b/sign-in.html
@@ -147,7 +147,8 @@
                     </button>
                     <button class="btn btn-google">
                         <!-- <i class="fab fa-google"></i> -->
-                        <img src="https://img.icons8.com/?size=96&id=17949&format=png" alt="google-icon" width="18">
+                        <img src="https://img.icons8.com/?size=96&id=17949&format=png" alt="google-icon" width="18"
+                            class="mb-1">
                     </button>
                     <button class="btn btn-apple">
                         <i class="fab fa-apple"></i>
