--- a/myaccount.html
+++ b/myaccount.html
@@ -58,7 +58,7 @@
                             <button class="btn btn-google">
                                 <!-- <i class="fab fa-google"></i> -->
                                 <img src="https://img.icons8.com/?size=96&id=17949&format=png" alt="google-icon"
-                                    width="18">
+                                    width="17" class="mb-1">
                             </button>
                             <button class="btn btn-apple">
                                 <i class="fab fa-apple"></i>
