--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <p class="top-text" data-aos="fade-down" data-aos-duration="1000">Organic Food</p>
                     <h1 class="display-2" data-aos="fade-right" data-aos-duration="1000">Fresh Green Tea</h1>
                     <p class="bottam-text">Product by Armanee Shop.</p>
-                    <div class="top-btn"> <a href="/cart.html" class="text-dark text-decoration-none">Shop Now</a></div>
+                    <div class="top-btn"> <a href="shop.html" class="text-dark text-decoration-none">Shop Now</a></div>
                 </div>
             </div>
             <div class="carousel-item">
