--- a/myaccount.html
+++ b/myaccount.html
@@ -53,12 +53,16 @@
                         <!-- Social Media Login Buttons -->
                         <div class="social-login-buttons flex gap-2 text-center">
                             <button class="btn btn-facebook">
-                                <i class="fab fa-facebook-f"></i>
+                                <a href="https://www.facebook.com/login.php/">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
                             </button>
                             <button class="btn btn-google">
                                 <!-- <i class="fab fa-google"></i> -->
-                                <img src="https://img.icons8.com/?size=96&id=17949&format=png" alt="google-icon"
-                                    width="17" class="mb-1">
+                                <a href="https://shorturl.at/efdR1">
+                                    <img src="https://img.icons8.com/?size=96&id=17949&format=png" alt="google-icon"
+                                        width="17" class="mb-1">
+                                </a>
                             </button>
                             <button class="btn btn-apple">
                                 <i class="fab fa-apple"></i>
