--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
                     data-aos-duration="1000">
                 <div class="carousel-caption left-caption">
                     <p class="top-text" data-aos="fade-down" data-aos-duration="1000">Organic Food</p>
-                    <!-- <h1 class="display-2" data-aos="fade-right" data-aos-duration="1000">Fresh Green Tea</h1> -->
-                    <h1 class="display-2">Fresh Green Tea</h1>
+                    <h1 class="display-2" data-aos="fade-right" data-aos-duration="1000">Fresh Green Tea</h1>
                     <p class="bottam-text">Product by Armanee Shop.</p>
                     <div class="top-btn"> <a href="shop.html" class="text-dark text-decoration-none">Shop Now</a></div>
                 </div>
@@ -307,7 +306,12 @@
 
     <!-----Footer Section End------>
     <script>
-        AOS.init();
+        AOS.init({
+            duration: 1000,
+            once: true,
+            offset: 0,
+        });
+
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
